--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,39 @@
-name: CI/CD for react Todo 
+name: Docker Build and Push
 
 on:
   push:
     branches:
-      - main
+      - main  # Triggers the workflow when there's a push to the 'main' branch
+  pull_request:
+    branches:
+      - main  # Runs on pull requests targeting the 'main' branch
 
 jobs:
-  # Build Job
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install Node
-        uses: actions/setup-node@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          node-version: 18.x
+          username: ${{ secrets.DOCKER_USERNAME }}  # Set Docker Hub username in GitHub Secrets
+          password: ${{ secrets.DOCKER_PASSWORD }}  # Set Docker Hub password in GitHub Secrets
 
-      - name: Install Dependencies
-        run: |
-          cd todo
-          npm install
-
-      - name: Build Project
-        run: |
-          cd todo
-          npm run build
-
-      - name: Upload artifact to enable deployment
-        uses: actions/upload-artifact@v3
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
-          name: poduction file
-          path: ./todo/build
+          context: .
+          file: ./Dockerfile  # Path to Dockerfile
+          push: true          # Set to 'false' if you don't want to push
+          tags: |
+            harish7303/todo:latest  # Replace with your Docker Hub harish7303 and repo name
+            harish7303/todo:${{ github.sha }}  # Tag the image with the Git SHA
 
-  # Deploy Job
-  deploy:
-   
-    needs: build
-    
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: poduction file
-          path: ./todo/build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.KEY }} #this is the key of the access token
-          publish_dir: ./todo/build
-  
+      - name: Verify the built image
+        run: docker images  # Lists all images to verify the built image
